Minor code cleanup